force-app/main/default/objects/Proposal_Breakdown__c/Proposal_Breakdown__c.object-meta.xml
<CustomObject>
    <label>Funding Opportunity Breakdown</label>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Opportunity Breakdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Breakdown</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>