force-app/main/default/objects/Proposal_Breakdown__c/fields/Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>Academic_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Funding Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Funding Opportunity Breakdown (Academic Organization)</relationshipLabel>
    <relationshipName>Funding_Opportunity_Breakdown</relationshipName>
    <type>Lookup</type>
</CustomField>