force-app/main/default/objects/Proposal_Breakdown__c/fields/Amount_by_Probability__c.field-meta.xml
<CustomField>
    <fullName>Amount_by_Probability__c</fullName>
    <formula>Amount__c *  Opportunity_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount by Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>