force-app/main/default/objects/Proposal_Breakdown__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Designation__c</field>
            <operation>equals</operation>
            <valueField>ucinn_ascendv2__Designation__c.ucinn_ascendv2__X1_Department__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Designation__c</field>
            <operation>equals</operation>
            <valueField>ucinn_ascendv2__Designation__c.ucinn_ascendv2__X1_Academic_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Opportunity Breakdown</relationshipLabel>
    <relationshipName>Opportunity_Breakdown</relationshipName>
    <type>Lookup</type>
</CustomField>