force-app/main/default/objects/Proposal_Breakdown__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <formula>Fund__r.ucinn_ascendv2__Designation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Name</label>
    <type>Text</type>
</CustomField>