force-app/main/default/objects/Proposal_Breakdown__c/fields/Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability__c</fullName>
    <formula>Proposal__r.Probability</formula>
    <label>Opportunity Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>