force-app/main/default/objects/Proposal_Breakdown__c/fields/Solicited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Solicited_Amount__c</fullName>
    <label>Solicited Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>